# file2lines

./: CMakeLists.txt  README.md
file2lines/: CMakeLists.txt
samples/: CMakeLists.txt
samples/src/: samples.cpp
tests/: CMakeLists.txt
tests/src/: tests.cpp
txt2lines/: CMakeLists.txt
txt2lines/include/txt2lines/: file.hpp  line.hpp  reader.hpp
txt2lines/src/: file.cpp  line.cpp  reader.cpp
